bug: 73804 IE: Appt subject is not properly visible due to current time indicator line height
- IE does not understand the 1px height. It automatically sets it to 3px even though we make font-size, line-height to 0
- Make the indicator strip as combination of 2 divs one inside another
- Set statically positioned inner div's height to 4px and margin -4px
- Set absolutely positioned outer div's overflow hidden

Review: https://reviewboard.eng.vmware.com/r/335194/

http://bugzilla.zimbra.com/show_bug.cgi?id=73804

Copied from Perforce
 Change: 368980

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -1826,9 +1826,18 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	font-size:0;
 	line-height:0;
 	background-color:@CalendarNowColor@;
-	height:1px;
+	height: 4px;
+    position: static;
+    margin: -3px;
 }
-
+.calendar_cur_time_indicator_container{
+	font-size:0;
+	line-height:0;
+	height: 1px;
+    position: absolute;
+    overflow: hidden;
+    z-index: 1000000;
+}
 .calendar_start_limit_indicator,.calendar_end_limit_indicator{
 	padding:0px;
 	height:20px;
